--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,29 @@
 server.port=8080
 
 ## Hibernate Properties
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SchoolCompetition;trustServerCertificate=true;
-spring.datasource.username=sa
-spring.datasource.password=12345
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SchoolCompetition;trustServerCertificate=true;
+#spring.datasource.username=sa
+#spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+#spring.jpa.properties.hibernate.format_sql=true
 
 # DevTools Propertiesa
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
+
+#MySQL
+#spring.datasource.url=jdbc:mysql://localhost:3306/SchoolCompetition
+#spring.datasource.username=root
+#spring.datasource.password=12345
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+#Railway
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:52667/railway
+spring.datasource.username=root
+spring.datasource.password=A3ccfddhgD4c4FD6661Gbce52Gd6FeFb
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
