--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,8 @@ spring.devtools.livereload.enabled=true
 #spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 #Railway
-spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:52667/railway
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:28275/railway
 spring.datasource.username=root
-spring.datasource.password=A3ccfddhgD4c4FD6661Gbce52Gd6FeFb
+spring.datasource.password=gahcfd4Hc1BbGh3Ec42f66GEeg5BCd14
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
